BAU - fix beta logo spacing

--- a/source/pay-product-page/stylesheets/modules/_header.scss
+++ b/source/pay-product-page/stylesheets/modules/_header.scss
@@ -4,3 +4,8 @@
     width: 50%;
   }
 }
+
+.govuk-phase-banner__content__tag {
+    margin-left: 5px;
+    vertical-align: top;
+}
